fix: overflow card fix 🧁

--- a/src/pages/LandingPage.css
+++ b/src/pages/LandingPage.css
@@ -18,7 +18,6 @@
     box-shadow: rgba(0, 0, 0, 0.6) 0px 14px 28px, rgba(0, 0, 0, 0.6) 0px 10px 10px;
     position: relative;
     min-width: 45vh;
-    max-width: 60vh;
 }
 
 .table {
